SAMU-182 Improve logging for !cursor->index->is_committed() crashes

Print error message on corrupted index like this:

2023-11-27 21:04:28 [T9] [ERROR] InnoDB: Table `test`.`t1` has corrupted index `a`

Note that there is no assertion crash anymore as of MDEV-22739